--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="input_hint">Non-negetive number</string>
     <string name="go_button">Go</string>
-
+    <string name="title_activity_display_result">DisplayResultActivity</string>
+    <string name="result_default">result</string>
 </resources>
